# client_server_proj_1_linux

client/: CMakeLists.txt
client/include/: TCPClient.h
client/source/: TCPClient.cpp  main.cpp
server/: CMakeLists.txt
server/include/: TCPServer.h
server/source/: TCPServer.cpp  main.cpp
